--- a/Top Filmes/Podfile
+++ b/Top Filmes/Podfile
@@ -4,6 +4,9 @@
 target 'Top Filmes' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
+  
+  # ignore all warnings from all pods
+  inhibit_all_warnings!
 
   # Pods for Top Filmes
   pod 'ReachabilitySwift'
